[workspace]
members = [
    "lib/interaction",
    "lib/video_capture",
    "lib/template",
    "lib/zeroes",

    "sketches/d20220201",
    "sketches/nbodychoreo",
    "sketches/tiling",
    "sketches/dither",
    "sketches/posterize",

    "projects/fluid/cpu_v1",

    "learning/learn-wgpu",
]

exclude = [
    "assets"
]

resolver= "2"
