[workspace]
members = [
    "lib/*",

    "sketches/*",

    "projects/fluid/cpu_v1",

    "learning/learn-wgpu",
    "learning/nature_of_code/*",
    "learning/generative_design/*",
    "learning/universe",
    "learning/schotter/schotter1",
    "learning/schotter/schotter2",
    "learning/schotter/schotter3",
    "learning/schotter/schotter4",

]

exclude = ["assets"]

resolver = "2"
