[package]
name = "cpu_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
nannou_egui = "0.5.0"
ndarray = "0.15.4"
interaction = { path="../../../lib/interaction"}

#![recursion_limit = "256"]